--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -2,7 +2,7 @@
 <div class="container">
   <mat-toolbar>
     <span class="logo">H</span>
-    <span class="title">Portal</span>
+    <span class="title">arvard Portal</span>
 
     <span class="example-spacer"></span>
 
