--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -3,12 +3,12 @@
 }
 
 mat-toolbar{
-    background-color: crimson;
+    background-color: #dc143c;
 }
 
 .title {
     color: white;
-    padding-left: 10px;
+    padding-left: 0px;
 }
 
 .logo {
